Fixed recent layout issues

--- a/css/assets/_layout.css
+++ b/css/assets/_layout.css
@@ -268,11 +268,14 @@ hr {
 	border-top: 3px solid #e5e5e5;
 }
 
-#carbonads-container {
+#carbonads {
 	/* float: right; */
 	/* min-height: 215px; */
-	margin: 0 0 25px;
+	margin: 0 -10px 25px;
 	min-height: 120px;
+	width: 130px;
+	border: 1px solid #eee;
+	padding: 10px;
 	font-size: 0.8em;
 }
 
@@ -284,6 +287,10 @@ hr {
 .carbon-wrap {
 	display: block;
 	margin-bottom: 10px;
+}
+
+.carbon-poweredby {
+	font-style: italic;
 }
 
 .more-tools {
